fix: readability

--- a/src/components/landing/landing.module.scss
+++ b/src/components/landing/landing.module.scss
@@ -44,7 +44,7 @@
       border: 4px solid var(--color-custom-blue);
     }
     .description {
-      margin-top: 8px;
+      margin-top: 2rem;
       font-family: 'Nanum Gothic', sans-serif;
       font-size: $font-medium;
       font-weight: 700;
